--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"gatsby-plugin-sharp": "^2.0.17",
 		"gatsby-plugin-sitemap": "^2.0.4",
 		"gatsby-source-filesystem": "^2.0.16",
+		"gatsby-source-sanity": "^1.1.0",
 		"gatsby-transformer-json": "^2.1.8",
 		"gatsby-transformer-sharp": "^2.1.10",
 		"node-sass": "^4.10.0",
