--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"react": "^16.7.0",
 		"react-dom": "^16.7.0",
 		"react-helmet": "^5.2.0",
-		"react-icons": "^3.2.2"
+		"react-icons": "^3.2.2",
+		"react-player": "^1.11.0"
 	},
 	"keywords": [
 		"gatsby",
