--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"dependencies": {
 		"bulma": "^0.7.2",
 		"bulma-helpers": "^0.3.6",
+		"dotenv": "^8.0.0",
 		"gatsby": "^2.0.91",
 		"gatsby-image": "^2.0.26",
 		"gatsby-plugin-google-analytics": "^2.0.9",
@@ -15,8 +16,8 @@
 		"gatsby-plugin-sass": "^2.0.7",
 		"gatsby-plugin-sharp": "^2.0.17",
 		"gatsby-plugin-sitemap": "^2.0.4",
+		"gatsby-source-airtable": "^2.0.8",
 		"gatsby-source-filesystem": "^2.0.16",
-		"gatsby-source-sanity": "^1.1.0",
 		"gatsby-transformer-json": "^2.1.8",
 		"gatsby-transformer-sharp": "^2.1.10",
 		"node-sass": "^4.10.0",
